--- a/sample.tex
+++ b/sample.tex
@@ -7,11 +7,16 @@
 
 \title{Reconstruction of the Seabottom Reflection Coefficient}
 
-\author{\textbf{Evgeny O. Kovalenko}, Igor V. Prokhorov, Andrey A. Sushchenko}% List of authors with the
+\author{\textbf{Evgeny O. Kovalenko}}% List of authors with the
+{Far Eastern Federal University, Vladivostok, Russia}                 % same affiliation,
+% lecturer given in bold
+{kovalenko.eo@dvfu.ru}                                   % 
+
+\author{Igor V. Prokhorov, Andrey A. Sushchenko}% List of authors with the
 {Institute for Applied Mathematics, FEB RAS, Vladivostok, Russia, \\ 
 	Far Eastern Federal University, Vladivostok, Russia}                 % same affiliation,
 % lecturer given in bold
-{kovalenko.eo@dvfu.ru, sushchenko.aa@dvfu.ru}                                   % e-mail of lecturer
+{prokhorov@iam.dvo.ru, sushchenko.aa@dvfu.ru}                                   % e-mail of lecturer
 %
 %                                                 % it is important not to have
 %                                                 % blank lines between the
@@ -59,7 +64,7 @@ In this paper authors develop a generalized algorithm of object focusing for the
 \begin{figure}[h!]\center
 	
 	\includegraphics[width=1\linewidth]{img/gbo.jpg}
-	\caption{AUV with SSS on board}
+	\caption{Autonomous underwater vehicle with side-scan sonar on board}
 	\label{ris:gbo}
 \end{figure}
 Propagation of acoustic waves on the tens order kHz frequencies in the fluctuating ocean is described by radiation
@@ -120,8 +125,8 @@ The authors consider the case when the receiving antenna detects signals from on
 \end{multline}
 here, 
 \begin{align*}
-	|\Vt - \y| = \left|\dfrac{c(t-t_i)}{2}(1+\dfrac{V^2}{c^2})\right|, \\
-	|\x-\y| = \left|\dfrac{c(t-t_i)}{2}(1-\dfrac{V^2}{c^2})\right|, \\
+	|\Vt - \y| = \left|\dfrac{c(t-t_i)}{2}\left(1+\dfrac{V^2}{c^2}\right) \right|, \\
+	|\x-\y| = \left|\dfrac{c(t-t_i)}{2}\left(1-\dfrac{V^2}{c^2}\right) \right|, \\
 	y_1 = \sqrt{|\Vt-\y|^2 - l^2}.
 \end{align*}
 The equation (\ref{form}) describes receiving signal from SSS in the time $t$ from starboard and port side in the i-th sensing interval. Integral at the right side set on the seabottom domain from which the signal is reflected. Directivity pattern $S(\textbf{k})$ determines reflection area. $|Vt-y|$ denote the slant range for the receiver, whereas $|Vt_i-y|$   is the slant range for the source. $y_1$ is downrange.
@@ -200,15 +205,15 @@ Fig. \ref{ris:dno} shows the seabottom surface with a size of 20 m to 20 m. The 
 
 \begin{figure}[h!]\center%---------------ONE DEGREE---------------
 	\begin{tabular}{cccc}
-		\includegraphics[width=0.2\linewidth]{img/5/1.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/5/3.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/5/4.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/5/5.jpg}\\
+		\includegraphics[width=0.2\linewidth]{k-img-5-1.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-5-3.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-5-4.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-5-5.jpg}\\
 		a & b & c & d \\
-		\includegraphics[width=0.2\linewidth]{img/5/6.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/5/7.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/5/8.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/5/9.jpg}\\
+		\includegraphics[width=0.2\linewidth]{k-img-5-6.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-5-7.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-5-8.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-5-9.jpg}\\
 		e & f & g & h		
 	\end{tabular}
 	\caption{Seabottom reconstruction with aperture of receiving antenna $\varepsilon=1^\circ$}
@@ -217,30 +222,30 @@ Fig. \ref{ris:dno} shows the seabottom surface with a size of 20 m to 20 m. The 
 \begin{figure}[h!]\center%---------------TWO DEGREE---------------
 	\label{ris:desc2}
 	\begin{tabular}{cccc}
-		\includegraphics[width=0.2\linewidth]{img/6/1.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/6/3.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/6/4.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/6/5.jpg}\\
+		\includegraphics[width=0.2\linewidth]{k-img-6-1.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-6-3.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-6-4.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-6-5.jpg}\\
 		a & b & c & d \\
-		\includegraphics[width=0.2\linewidth]{img/6/5.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/6/6.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/6/9.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/6/5.jpg}\\
+		\includegraphics[width=0.2\linewidth]{k-img-6-6.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-6-7.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-6-8.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-6-9.jpg}\\
 		e & f & g & h \\
 	\end{tabular}
 	\caption{Seabottom reconstruction with aperture of receiving antenna $\varepsilon=2^\circ$ }
 \end{figure}
 \begin{figure}[h!]\center%---------------FOUR DEGREE---------------
 	\begin{tabular}{cccc}
-		\includegraphics[width=0.2\linewidth]{img/7/1.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/7/3.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/7/4.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/7/5.jpg}\\
+		\includegraphics[width=0.2\linewidth]{k-img-7-1.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-7-3.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-7-4.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-7-5.jpg}\\
 		a & b & c & d\\
-		\includegraphics[width=0.2\linewidth]{img/7/6.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/7/7.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/7/8.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/7/9.jpg}\\
+		\includegraphics[width=0.2\linewidth]{k-img-7-6.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-7-7.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-7-8.jpg}&
+		\includegraphics[width=0.2\linewidth]{k-img-7-9.jpg}\\
 		e & f & g & h
 	\end{tabular}
 	\caption{Seabottom reconstruction with aperture of receiving antenna $\varepsilon=4^\circ$}
@@ -305,7 +310,7 @@ Fig. \ref{ris:dno} shows the seabottom surface with a size of 20 m to 20 m. The 
 		d & 0.1778 & 0.0125 & h &  0.1952 & 0.0447\\ \hline
 	\end{tabular}
 	\label{table:desc1}
-	\caption{Computational error with $\varepsilon=1^\circ$}
+	\caption{Numerical error with $\varepsilon=1^\circ$}
 \end{table}
 \begin{table}[h!]
 	\begin{tabular}{|c|c|c||c|c|c|}
@@ -318,7 +323,7 @@ Fig. \ref{ris:dno} shows the seabottom surface with a size of 20 m to 20 m. The 
 		d & 0.1647 & 0.0134 & h &  0.2 & 0.0540\\ \hline
 	\end{tabular}
 	\label{table:desc2}
-	\caption{Computational error with $\varepsilon=2^\circ$}	
+	\caption{Numerical error with $\varepsilon=2^\circ$}	
 \end{table}
 \begin{table}[h!]
 	\begin{tabular}{|c|c|c||c|c|c|}
@@ -331,7 +336,7 @@ Fig. \ref{ris:dno} shows the seabottom surface with a size of 20 m to 20 m. The 
 		d & 0.1634 & 0.0234 & h &  0.1983 & 0.0526\\ \hline
 	\end{tabular}
 	\label{table:desc3}
-	\caption{Computational error with $\varepsilon=4^\circ$}	
+	\caption{Numerical error with $\varepsilon=4^\circ$}	
 \end{table}
 \begin{table}[h!]
 	\begin{tabular}{|c|c|c||c|c|c|}
@@ -344,7 +349,7 @@ Fig. \ref{ris:dno} shows the seabottom surface with a size of 20 m to 20 m. The 
 		d & 0.1984 & 0.0291 & h &  0.1817 & 0.0477\\ \hline
 	\end{tabular}
 	\label{table:desc4}
-	\caption{Computational error with $\varepsilon=8^\circ$}
+	\caption{Numerical error with $\varepsilon=8^\circ$}
 \end{table}
 \begin{table}[h!]
 	\begin{tabular}{|c|c|c||c|c|c|}
@@ -357,7 +362,7 @@ Fig. \ref{ris:dno} shows the seabottom surface with a size of 20 m to 20 m. The 
 		d & 0.2505 & 0.0440 & h &  0.2 & 0.0423\\ \hline
 	\end{tabular}
 	\label{table:desc5}
-	\caption{Computational error with $\varepsilon=14^\circ$}
+	\caption{Numerical error with $\varepsilon=14^\circ$}
 \end{table}
 \begin{table}[h!]
 	\begin{tabular}{|c|c|c||c|c|c|}
@@ -370,12 +375,12 @@ Fig. \ref{ris:dno} shows the seabottom surface with a size of 20 m to 20 m. The 
 		d & 0.1384 & 0.4 & h &  0.1165 & 0.4\\ \hline
 	\end{tabular}
 	\label{table:desc6}
-	\caption{Computational error with $\varepsilon=40^\circ$}
+	\caption{Numerical error with $\varepsilon=40^\circ$}
 \end{table}
 
 
-\section*{Conclusion}
-As we can see, increasing the angle solution of the directivity pattern leads to increasing object diameter on the reconstruction image. For example, in the last experiments when $\varepsilon=40^\circ$ the diameter in the zeroth iteration increase in two times. It is worth to note that the method is applicable at small solutions of the directivity pattern, as can be seen from Fig. \ref{ris:desc2}. Further, in figures \ref{ris:desc3} - \ref{ris:desc5}, objects are compressed to their geometric center. However, the rough sampling leads to the appearance of artifacts that repeat the boundaries of the object. Moreover, each new iteration this effect is multiplied. To vanish boundary deformations, authors use a priori information on the admissible values of the seabottom scattering coefficient which allows to project the solution to allowable boundaries in each iteration. As you can see from the figures, the method qualitatively restores the boundaries of objects less than 8 iterations. With small solutions of directivity pattern, it is possible to obtain quantitative similarity. It is worth to note that in the limiting case at $\varepsilon = 40\circ$ (Fig.\ref{ris:desc6}) only the object with larger diameter is reconstructed due to the trace of the directivity pattern on the seabottom is larger than the diameter of small objects. Tables 2 --- 7 show the RMS and maximum errors in reconstructing the seabottom scattering coefficient at each iteration of the Seidel method. As can be seen from the experiments, the RMS error decreases to the certain threshold value, but after is increased. Thereby, the instability of the iterative method is confirmed. However, the visual representation of the image with further iterations only improves due to a discrepancy in absolute values with an exact solution. If in each iteration the solution is normalized to the maximum the method is absolutely applicable to any solutions of the directivity pattern.
+%\section*{Conclusion}
+As we can see, increasing the angle solution of the directivity pattern leads to increasing object diameter on the reconstruction image. For example, in the last experiments when $\varepsilon=40^\circ$ the diameter in the zeroth iteration increase in two times. It is worth to note that the method is applicable at small solutions of the directivity pattern, as can be seen from Fig. \ref{ris:desc2}. Further, in figures \ref{ris:desc3} - \ref{ris:desc5}, objects are compressed to their geometric center. However, the rough sampling leads to the appearance of artifacts that repeat the boundaries of the object. Moreover, each new iteration this effect is multiplied. To vanish boundary deformations, authors use a priori information on the admissible values of the seabottom scattering coefficient which allows to project the solution to allowable boundaries in each iteration. As you can see from the figures, the method qualitatively restores the boundaries of objects less than 8 iterations. With small solutions of directivity pattern, it is possible to obtain quantitative similarity. It is worth to note that in the limiting case at $\varepsilon = 40^\circ$ (Fig.-\ref{ris:desc6}) only the object with larger diameter is reconstructed due to the trace of the directivity pattern on the seabottom is larger than the diameter of small objects. Tables 2 --- 7 show the RMS and maximum errors in reconstructing the seabottom scattering coefficient at each iteration of the Seidel method. As can be seen from the experiments, the RMS error decreases to the certain threshold value, but after is increased. Thereby, the instability of the iterative method is confirmed. However, the visual representation of the image with further iterations only improves due to a discrepancy in absolute values with an exact solution. If in each iteration the solution is normalized to the maximum the method is absolutely applicable to any solutions of the directivity pattern.
 
 \section*{Acknowledgements}
 The research was supported by the Russian Science Foundation (Project No. 14-11-00079).
@@ -387,17 +392,17 @@ The research was supported by the Russian Science Foundation (Project No. 14-11-
 \bibitem{Turner} Turner, J.\,A., Weaver, R.\,L., 1994, 
 Radiative transfer of ultrasound, 
 \emph{The Journal of the Acoustical Society of America},  
-Vol.\; {\bf 96(6)}, pp.\; 3654--3674.
+Vol.\; {\bf 96}, No. {\bf 6}, pp.\; 3654--3674.
 
 \bibitem{Zurk} Quijano, J.\,E., Zurk, L.\,M., 2009, 
 Radiative transfer theory applied to ocean bottom modeling, 
 \emph{The Journal of the Acoustical Society of America},  
-Vol.\; {\bf 126(4)}, pp.\; 711-723.
+Vol.\; {\bf 126}, No. {\bf 4}, pp.\; 711-723.
 
 \bibitem{AF2015}  Prokhorov, I.\,V., Sushchenko, A.\,A., 2015, 
 Studying the problem of acoustic sounding of the seabed using methods of radiative transfer theory, 
 \emph{Acoustical Physics},
-Vol.\; {\bf 61(3)}, pp.\; 368--375.
+Vol.\; {\bf 61}, No. {\bf 3}, pp.\; 368--375.
 
 \bibitem{SPIE_KOV} Kovalenko, E.\,O., Prokhorov, I.\,V., Sushchenko, A.\,A., 2016,
 Processing of the information from side-scan sonar
